tests/ui/asm/aarch64/srcloc.stderr
error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:19:15
   |
LL |         asm!("invalid_instruction");
   |               ^^^^^^^^^^^^^^^^^^^
   |
note: instantiated into assembly here
  --> <inline asm>:1:2
   |
LL |     invalid_instruction
   |     ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:23:13
   |
LL |             invalid_instruction
   |             ^^^^^^^^^^^^^^^^^^^
   |
note: instantiated into assembly here
  --> <inline asm>:2:13
   |
LL |             invalid_instruction
   |             ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:28:13
   |
LL |             invalid_instruction
   |             ^^^^^^^^^^^^^^^^^^^
   |
note: instantiated into assembly here
  --> <inline asm>:2:13
   |
LL |             invalid_instruction
   |             ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:34:13
   |
LL |             invalid_instruction
   |             ^^^^^^^^^^^^^^^^^^^
   |
note: instantiated into assembly here
  --> <inline asm>:3:13
   |
LL |             invalid_instruction
   |             ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:41:13
   |
LL |             invalid_instruction
   |             ^^^^^^^^^^^^^^^^^^^
   |
note: instantiated into assembly here
  --> <inline asm>:3:13
   |
LL |             invalid_instruction
   |             ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:46:14
   |
LL |         asm!(concat!("invalid", "_", "instruction"));
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: instantiated into assembly here
  --> <inline asm>:1:2
   |
LL |     invalid_instruction
   |     ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:50:14
   |
LL |             "invalid_instruction",
   |              ^^^^^^^^^^^^^^^^^^^
   |
note: instantiated into assembly here
  --> <inline asm>:1:2
   |
LL |     invalid_instruction
   |     ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:56:14
   |
LL |             "invalid_instruction",
   |              ^^^^^^^^^^^^^^^^^^^
   |
note: instantiated into assembly here
  --> <inline asm>:2:1
   |
LL | invalid_instruction
   | ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:63:14
   |
LL |             "invalid_instruction",
   |              ^^^^^^^^^^^^^^^^^^^
   |
note: instantiated into assembly here
  --> <inline asm>:3:1
   |
LL | invalid_instruction
   | ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:70:13
   |
LL |             concat!("invalid", "_", "instruction"),
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: instantiated into assembly here
  --> <inline asm>:2:1
   |
LL | invalid_instruction
   | ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:77:13
   |
LL |             concat!("invalid", "_", "instruction"),
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: instantiated into assembly here
  --> <inline asm>:2:1
   |
LL | invalid_instruction
   | ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:84:14
   |
LL |             "invalid_instruction1",
   |              ^^^^^^^^^^^^^^^^^^^^
   |
note: instantiated into assembly here
  --> <inline asm>:1:2
   |
LL |     invalid_instruction1
   |     ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:85:14
   |
LL |             "invalid_instruction2",
   |              ^^^^^^^^^^^^^^^^^^^^
   |
note: instantiated into assembly here
  --> <inline asm>:2:1
   |
LL | invalid_instruction2
   | ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:91:13
   |
LL | /             concat!(
LL | |                 "invalid", "_", "instruction1", "\n",
LL | |                 "invalid", "_", "instruction2",
LL | |             ),
   | |_____________^
   |
note: instantiated into assembly here
  --> <inline asm>:1:2
   |
LL |     invalid_instruction1
   |     ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:91:13
   |
LL | /             concat!(
LL | |                 "invalid", "_", "instruction1", "\n",
LL | |                 "invalid", "_", "instruction2",
LL | |             ),
   | |_____________^
   |
note: instantiated into assembly here
  --> <inline asm>:2:1
   |
LL | invalid_instruction2
   | ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:100:13
   |
LL | /             concat!(
LL | |                 "invalid", "_", "instruction1", "\n",
LL | |                 "invalid", "_", "instruction2",
LL | |             ),
   | |_____________^
   |
note: instantiated into assembly here
  --> <inline asm>:1:2
   |
LL |     invalid_instruction1
   |     ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:100:13
   |
LL | /             concat!(
LL | |                 "invalid", "_", "instruction1", "\n",
LL | |                 "invalid", "_", "instruction2",
LL | |             ),
   | |_____________^
   |
note: instantiated into assembly here
  --> <inline asm>:2:1
   |
LL | invalid_instruction2
   | ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:104:13
   |
LL | /             concat!(
LL | |                 "invalid", "_", "instruction3", "\n",
LL | |                 "invalid", "_", "instruction4",
LL | |             ),
   | |_____________^
   |
note: instantiated into assembly here
  --> <inline asm>:3:1
   |
LL | invalid_instruction3
   | ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:104:13
   |
LL | /             concat!(
LL | |                 "invalid", "_", "instruction3", "\n",
LL | |                 "invalid", "_", "instruction4",
LL | |             ),
   | |_____________^
   |
note: instantiated into assembly here
  --> <inline asm>:4:1
   |
LL | invalid_instruction4
   | ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:115:13
   |
LL | /             concat!(
LL | |                 "invalid", "_", "instruction1", "\n",
LL | |                 "invalid", "_", "instruction2", "\n",
LL | |             ),
   | |_____________^
   |
note: instantiated into assembly here
  --> <inline asm>:1:2
   |
LL |     invalid_instruction1
   |     ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:115:13
   |
LL | /             concat!(
LL | |                 "invalid", "_", "instruction1", "\n",
LL | |                 "invalid", "_", "instruction2", "\n",
LL | |             ),
   | |_____________^
   |
note: instantiated into assembly here
  --> <inline asm>:2:1
   |
LL | invalid_instruction2
   | ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:119:13
   |
LL | /             concat!(
LL | |                 "invalid", "_", "instruction3", "\n",
LL | |                 "invalid", "_", "instruction4", "\n",
LL | |             ),
   | |_____________^
   |
note: instantiated into assembly here
  --> <inline asm>:4:1
   |
LL | invalid_instruction3
   | ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:119:13
   |
LL | /             concat!(
LL | |                 "invalid", "_", "instruction3", "\n",
LL | |                 "invalid", "_", "instruction4", "\n",
LL | |             ),
   | |_____________^
   |
note: instantiated into assembly here
  --> <inline asm>:5:1
   |
LL | invalid_instruction4
   | ^

error: unrecognized instruction mnemonic
  --> $DIR/srcloc.rs:132:14
   |
LL |             "invalid_instruction"
   |              ^^^^^^^^^^^^^^^^^^^
   |
note: instantiated into assembly here
  --> <inline asm>:4:1
   |
LL | invalid_instruction
   | ^

error: aborting due to 24 previous errors

